--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "url": "https://github.com/Glup3/Jetti"
   },
   "dependencies": {
-    "discord.js": "^12.5.1",
-    "discord.js-commando": "^0.12.2",
-    "dotenv": "^8.2.0",
-    "graphql": "^15.5.0",
+    "axios": "^0.21.1",
+    "discord.js": "^12.5.3",
+    "discord.js-commando": "^0.12.3",
+    "dotenv": "^8.6.0",
+    "graphql": "^15.5.1",
     "graphql-request": "^3.4.0",
     "node-cron": "^2.0.3",
     "path": "^0.12.7",
@@ -28,22 +29,22 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^1.21.4",
-    "@graphql-codegen/typescript": "^1.22.0",
-    "@graphql-codegen/typescript-graphql-request": "^3.1.1",
-    "@graphql-codegen/typescript-operations": "^1.17.16",
-    "@types/bluebird": "^3.5.33",
-    "@types/node": "^14.14.21",
+    "@graphql-codegen/cli": "^1.21.5",
+    "@graphql-codegen/typescript": "^1.22.3",
+    "@graphql-codegen/typescript-graphql-request": "^3.2.3",
+    "@graphql-codegen/typescript-operations": "^1.18.2",
+    "@types/bluebird": "^3.5.35",
+    "@types/node": "^14.17.4",
     "@types/node-cron": "^2.0.3",
-    "@types/validator": "^13.1.3",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
-    "eslint": "^7.17.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
+    "@types/validator": "^13.1.4",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "nodemon": "^2.0.7",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.2",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.3.4"
   }
 }
