try adding slash command

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 BOT_OWNER=1234567890
 BOT_TOKEN=your_cool_bot_token
+GUILD_ID_DEV=799354235648344075
+
+API_TOKEN="someRandomToken"
+API_URL="https://jetti-api-v1.herokuapp.com/graphql"
