--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord.js": "^12.5.3",
     "discord.js-commando": "^0.12.3",
     "dotenv": "^8.6.0",
+    "glob": "^7.1.7",
     "graphql": "^15.5.1",
     "graphql-request": "^3.4.0",
     "node-cron": "^2.0.3",
@@ -34,6 +35,7 @@
     "@graphql-codegen/typescript-graphql-request": "^3.2.3",
     "@graphql-codegen/typescript-operations": "^1.18.2",
     "@types/bluebird": "^3.5.35",
+    "@types/glob": "^7.1.3",
     "@types/node": "^14.17.4",
     "@types/node-cron": "^2.0.3",
     "@types/validator": "^13.1.4",
